listen tests work, client test still fails

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 
 {port_env, [
             {"DRV_CFLAGS",  "$DRV_CFLAGS -Werror -I c_src"},
-            {"DRV_LDFLAGS", "$DRV_LDFLAGS c_src/libutp/libutp.a"}
+            {"DRV_LDFLAGS", "$DRV_LDFLAGS -lstdc++ c_src/libutp/libutp.a"}
            ]}.
 
 {pre_hooks, [{compile, "c_src/build_deps.sh"}]}.
