add support for blocking accept with optional timeout

--- a/rebar.config
+++ b/rebar.config
@@ -4,7 +4,7 @@
 {port_specs, [{"priv/utpdrv.so", ["c_src/*.cc"]}]}.
 
 {port_env, [
-            {"DRV_CFLAGS",  "$DRV_CFLAGS -Werror -I c_src"},
+            {"DRV_CFLAGS",  "$DRV_CFLAGS -Werror -I c_src -D_REENTRANT"},
             {"DRV_LDFLAGS", "$DRV_LDFLAGS -lstdc++ c_src/libutp/libutp.a"}
            ]}.
 
