build driver with -O3

--- a/rebar.config
+++ b/rebar.config
@@ -4,8 +4,8 @@
 {port_specs, [{"priv/utpdrv.so", ["c_src/*.cc"]}]}.
 
 {port_env, [
-            {"DRV_CFLAGS",  "$DRV_CFLAGS -Werror -I c_src -D_REENTRANT"},
-            {"DRV_LDFLAGS", "$DRV_LDFLAGS -lstdc++ c_src/libutp/libutp.a"}
+            {"DRV_CFLAGS",  "$DRV_CFLAGS -Werror -I c_src -D_REENTRANT -O3"},
+            {"DRV_LDFLAGS", "$DRV_LDFLAGS -O3 -lstdc++ c_src/libutp/libutp.a"}
            ]}.
 
 {pre_hooks, [{compile, "c_src/build_deps.sh"}]}.
